# swegov-opendata-rs

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Justfile  Makefile  README.md  cliff.toml  clippy.toml
crates/fetch-rd/: Cargo.toml
crates/fetch-rd/src/: main.rs  options.rs
crates/fetch-sfs/: Cargo.toml
crates/fetch-sfs/src/: main.rs  options.rs
crates/minidom-extension/: Cargo.toml
crates/minidom-extension/src/: attrib_query.rs  lib.rs
crates/opendata-rd-spider/: Cargo.toml
crates/opendata-rd-spider/src/: error.rs  item.rs  lib.rs  rd_spider.rs
crates/opendata-spiders/: Cargo.toml
crates/opendata-spiders/assets/: dokumentlista.xml  dokumentstatus.xml
crates/opendata-spiders/src/: error.rs  item.rs  sfs.rs
crates/opendata-spiders/tests/api/: item.rs
crates/preprocess-rd/: Cargo.toml
crates/preprocess-rd-segreg/: Cargo.toml
crates/preprocess-rd-segreg/src/: main.rs
crates/preprocess-rd/src/: main.rs  options.rs
crates/preprocess-sfs/: Cargo.toml
crates/preprocess-sfs/src/: main.rs  options.rs
crates/preprocess-ui/: Cargo.toml
crates/preprocess-ui/src/: ui.rs
crates/preprocessors/: Cargo.toml
crates/preprocessors/src/: lib.rs  progress.rs  rd-preprocess.rs  shared.rs
crates/sfs-preprocess/: Cargo.toml
crates/sfs-preprocess/src/: main.rs
crates/sparv-extension/: Cargo.toml
crates/sparv-extension/src/: error.rs  lib.rs  sparv_config.rs  xml_source_writer.rs
crates/swegov-opendata/: Cargo.toml
crates/swegov-opendata-preprocess/: Cargo.toml
crates/swegov-opendata-preprocess/assets/: Riksdagens diarium-2014-2017.metadata.json  Skriftliga frågor-1990-1997-gl11103.json  Skriftliga frågor-1990-1997-gl12229.json  Skriftliga frågor-1990-1997.metadata.json  Skriftliga frågor-1998-2001-gm11284.json  Skriftliga frågor-1998-2001-gn121309.json  Skriftliga frågor-1998-2001.metadata.json  bet-1998-2001.metadata.json  bet-2006-2009-gw01fiu3.json  bet-2006-2009.metadata.json  bet-2010-2013.metadata.json  bet-2018-2021-h601au6.json  bet-2018-2021.metadata.json  bet-2022-2025-ha01au6.json  bet-2022-2025.metadata.json  cks6riksg.expected.xml  cks6riksg.html  contents.html  ds-1990-1999-gib472.json  ds-1990-1999.metadata.json  example1.expected.xml  frsrdg-2018-2021.metadata.json  ip-2002-2005-gq10128.json  ip-2002-2005-gq1027.json  ip-2002-2005-gr1037.json  ip-2002-2005-gr10538.json  ip-2002-2005.metadata.json  ip-2006-2009.metadata.json  ip-2014-2017-h210692.json  ip-2014-2017-h410591.json  ip-2014-2017.metadata.json  kammakt-2018-2021-h9c120220419bu.json  kammakt-2018-2021.metadata.json  kom-2010-2014-gzb6452.json  kom-2010-2014.metadata.json  kom-2020-.metadata.json  mot-1971-1979-g3021833.json  mot-1971-1979.metadata.json  mot-1998-2001-gp02fi39.json  mot-1998-2001-gp02kr419.json  (+31 more)
crates/swegov-opendata-preprocess/assets/sfs-1976/: sfs-1976-257.json
crates/swegov-opendata-preprocess/assets/sfs-1994/: sfs-1994-448.json
crates/swegov-opendata-preprocess/src/: corpusinfo.rs  error.rs  lib.rs  preprocess_rd.rs  preprocess_sfs.rs  progress.rs  shared.rs
crates/swegov-opendata-preprocess/src/nodeinfo/: mod.rs  rcdom.rs
crates/swegov-opendata-preprocess/src/preprocess_rd/: html.rs  rd_corpura.rs  rd_json.rs  rd_segreg_corpus.rs  shared.rs  xml.rs
crates/swegov-opendata-preprocess/src/preprocess_sfs/: error.rs  sfs_corpura.rs  sfs_json.rs  shared.rs  sparv_source.rs
crates/swegov-opendata-preprocess/src/shared/: io_ext.rs  tests.rs
crates/swegov-opendata/assets/: Riksdagens diarium-2014-2017-h5d2467.json  bet-1998-2001-gp01bou1.json  bet-2006-2009-gu01au1.json  bet-2010-2013-gy01au1.json  bet-2010-2013-h101föu11.json  bet-2018-2021-h601au1.json  datasetlista.xml  dokumentlista_1901_1920.xml  dokumentlista_1961_1980.xml  dokumentlista_20251216.xml  frsrdg-2018-2021-h604nr1.json  ip-2006-2009-gu10110.json  ip-2006-2009-gu10379.json  ip-2014-2017-h210566.json  kammakt-2018-2021-h6c120190118zz.json  kom-2010-2014-h2b643.json  kom-2020--h8b6447.json  mot-1998-2001-gm02bo208.json  mot-2010-2013-gy02x-s68106.json  mot-2014-2017-h2021148.json  mot-gy02a1.json  mot-h102xs24006.json  prop-2018-2021-h603100.json  prot-1990-1997-ge091.json  prot-ge091.json  utskottsdokument-2002-2005-gta1aureg.json  yttr-2018-2021-h605au1y.json
crates/swegov-opendata/examples/: quick_dev_swegov_opendata.rs
crates/swegov-opendata/src/: dataset.rs  date_formats.rs  dokument.rs  dokument_lista.rs  lib.rs  one_or_many.rs  shared.rs  try_parse.rs
crates/webcrawler/: Cargo.toml
crates/webcrawler/src/: crawler.rs  spider.rs
preprocessors/: Cargo.toml
preprocessors/src/: rd_preprocess.rs  sfs-preprocess.rs  sfs_preprocess.rs  shared.rs
preprocessors/src/rd_preprocess/: main.rs
preprocessors/src/sfs_preprocess/: main.rs
sfs-corpus/: Cargo.toml
sfs-corpus-2/: Cargo.toml
sfs-corpus-2/examples/: quick_dev.rs
sfs-corpus/src/: corpus.rs  error.rs  main.rs
sparv-extension/: Cargo.toml
sparv-extension/src/: lib.rs  sparv_config.rs  xml_source_writer.rs
swegov-opendata/: Cargo.toml
swegov-opendata-preprocess/: Cargo.toml
swegov-opendata-preprocess/assets/: cks6riksg.expected.xml  example1.xml  sfs-1976-257.expected.xml  sfs-1976-257.json  sfs-1994-448.expected.xml
swegov-opendata-preprocess/assets/cks6riksg/: cks6riksg.json
swegov-opendata-preprocess/src/: corpusinfo.rs  lib.rs  main.rs  sfs_preprocess.rs  shared.rs
swegov-opendata-preprocess/src/nodeinfo/: minidom.rs  mod.rs  rcdom.rs
swegov-opendata-preprocess/src/preprocess/: html.rs  mod.rs  xml.rs
swegov-opendata-preprocess/src/preprocess_rd/: mod.rs  rd_corpura.rs  xml.rs
swegov-opendata-preprocess/src/preprocess_sfs/: sfs_corpura.rs  sfs_json.rs  sparv_source.rs
swegov-opendata-preprocess/src/shared/: tests.rs
swegov-opendata-preprocess/tests/: preprocess_rd_xml.rs  preprocess_sfs_json.rs
swegov-opendata-preprocess/tests/it/: main.rs  preprocess_sfs_json.rs
swegov-opendata/examples/: quick_dev.rs
swegov-opendata/src/: date_formats.rs  lib.rs  try_parse.rs
webcrawler/: Cargo.toml
webcrawler/src/: crawler.rs  lib.rs  spider.rs
(+259 files in other folders)
