
[workspace]
resolver = "2"
members = [
    "crates/fetch-sfs",
    "crates/sfs-preprocess",
    "crates/minidom-extension",
    "crates/opendata-spiders",
    "crates/preprocessors",
    "crates/sparv-extension",
    "crates/swegov-opendata",
    "crates/swegov-opendata-preprocess",
]
[workspace.package]
rust-version = "1.74"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "Språkbanken Text <sb-info@svenska.gu.se>",
    "Kristoffer Andersson <kristoffer.andersson@gu.se>",
]

[workspace.dependencies]
# local crates
preprocessors = { path = "./crates/preprocessors" }

# external crates
anyhow = "1.0.73"
async-trait = "0.1.82"
chrono = "0.4.37"
clap = { version = "4.4.11" }
config = "0.13.3"
deserx = { git = "https://github.com/kod-kristoff/deserx" }
error-stack = "0.4.1"
flate2 = "1.0.27"
futures = "0.3.28"
futures-core = "0.3"
html5ever = "0.22.5"
itertools = "0.11.0"
memchr = "2"
minidom = "0.15.2"
minidom-14 = "0.16.0"
once_cell = "1.18.0"
pretty_assertions = "1.4.0"
proc-macro2 = "1"
prodash = { version = "26.2.2" }
quick-xml = "0.28.2"
quote = "1"
rand_core = { version = "0.6", default-features = false }
regex = "1.9.5"
regex-automata = { version = "0.4", default-features = false }
regex-syntax = "0.8"
reqwest = { version = "0.11.17", default-features = false }
rstest = "0.18.2"
serde = { version = "1.0.210" }
serde-aux = "4.2.0"
serde_json = "1.0.128"
serde_with = "3.0.0"
serde_yaml = "0.9.27"
smallvec = { version = "1", default-features = false }
soup = "0.5.1"
syn = "2"
tokio = "1.40.0"
tokio-stream = "0.1.14"
tracing = "0.1.40"
tracing-core = "0.1"
tracing-forest = "0.1.6"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
ulid = "1.0.0"
webcrawler = { git = "https://github.com/spraakbanken/webcrawler-rs" }
zip = "0.6.6"
