
[workspace]
resolver = "2"
members = [
    "crates/fetch-rd",
    "crates/fetch-sfs",
    "crates/minidom-extension",
    "crates/opendata-rd-spider",
    "crates/opendata-spiders",
    "crates/preprocess-progress",
    "crates/preprocess-progress",
    "crates/preprocess-rd",
    "crates/preprocess-rd-segreg",
    "crates/preprocess-sfs",
    "crates/preprocess-ui",
    "crates/sparv-extension",
    "crates/swegov-opendata",
    "crates/swegov-opendata-preprocess",
]
[workspace.package]
rust-version = "1.85"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "Språkbanken Text <sb-info@svenska.gu.se>",
]
version = "0.2.2"

[workspace.dependencies]
# local crates
minidom-extension = { path = "./crates/minidom-extension" }
opendata-rd-spider = { path = "./crates/opendata-rd-spider" }
opendata-spiders = { path = "./crates/opendata-spiders" }
preprocess-progress = { path = "./crates/preprocess-progress" }
preprocess-ui = { path = "./crates/preprocess-ui" }
sparv-extension = { path = "./crates/sparv-extension" }
swegov-opendata = { path = "./crates/swegov-opendata" }
swegov-opendata-preprocess = { path = "./crates/swegov-opendata-preprocess" }

# external crates
anyhow = "1.0.73"
async-trait = "0.1.82"
chrono = "0.4.37"
clap = { version = "4.4.11" }
config = "0.13.3"
flate2 = "1.0.27"
fs-err = { version = "3.2.1", features = ["expose_original_error"] }
html5ever = "0.36.1"
insta = "1.40.0"
itertools = "0.11.0"
markup5ever_rcdom = "0.36.0"
miette = "7.2.0"
minidom-14 = "0.17.0"
once_cell = "1.18.0"
pretty_assertions = "1.4.0"
prodash = { version = "30.0.1" }
quick-xml = "0.38.4"
regex = "1.9.5"
reqwest = { version = "0.11.17", default-features = false }
rstest = "0.18.2"
serde = { version = "1.0.210" }
serde-aux = "4.2.0"
serde_json = "1.0.128"
serde_with = "3.10.0"
serde_yaml = "0.9.27"
similar-asserts = "1.6.0"
thiserror = "2.0.17"
test-log = { version = "0.2.16" }
tokio = "1.48.0"
tracing = "0.1.41"
tracing-forest = "0.1.6"
tracing_log_error = "0.1.4"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
ulid = "1.0.0"
webcrawler = { git = "https://github.com/spraakbanken/webcrawler-rs" }
xml-rs = "0.8.27"
yaserde = "0.12.0"
zip = "0.6.6"

[profile.dev.package.insta]
opt-level = 3
