[package]
name = "preprocessors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rd-preprocess"
path = "src/rd-preprocess.rs"
test = false
doctest = false

[[bin]]
name = "sfs-preprocess"
path = "src/sfs-preprocess.rs"
test = false
doctest = false

[dependencies]
clap = { workspace = true, features = ["derive", "cargo"] }
error-stack = { workspace = true }
prodash = { workspace = true, features = [
    "render-line",
    "render-line-crossterm",
] }
swegov-opendata-preprocess = { version = "0.1.0", path = "../swegov-opendata-preprocess" }
tracing = { workspace = true }
tracing-forest = "0.1.6"
tracing-subscriber = { workspace = true }
