[package]
name = "sfs-corpus-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
flate2 = "1.0.26"
scraper = "0.16.0"
serde = "1.0.164"
serde_json = "1.0.97"
swegov-opendata = { version = "0.2.0", path = "../swegov-opendata" }
