[package]
name = "sparv-extension"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-stack = { workspace = true }
serde_yaml = "0.9.27"
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
