[package]
name = "swegov-opendata-preprocess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rd-preprocess"
path = "src/rd_preprocess.rs"

[[bin]]
name = "sfs-preprocess"
path = "src/sfs_preprocess.rs"

[dependencies]
error-stack = "0.4.1"
html5ever = "0.22.5"
minidom-14 = "0.16.0"
regex = "1.9.5"
serde_json = "1.0.107"
soup = "0.5.1"
zip = "0.6.6"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
swegov-opendata = { version = "0.2.0", path = "../swegov-opendata" }
chrono = "0.4.31"
flate2 = "1.0.27"

[dev-dependencies]
itertools = "0.11.0"
rstest = "0.18.2"
