[package]
name = "swegov-opendata-preprocess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
error-stack = { workspace = true }
html5ever = "0.22.5"
regex = "1.9.5"
serde_json = "1.0.107"
soup = "0.5.1"
zip = "0.6.6"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
swegov-opendata = { version = "0.2.0", path = "../swegov-opendata" }
chrono = "0.4.31"
flate2 = "1.0.27"
pretty_assertions = "1.4.0"
once_cell = "1.18.0"
itertools = "0.11.0"
minidom-extension = { version = "0.1.0", path = "../minidom-extension" }
sparv-extension = { version = "0.1.0", path = "../sparv-extension" }
prodash = { workspace = true, features = [
    "render-line",
    "render-line-crossterm",
] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
itertools = "0.11.0"
pretty_assertions = "1.4.0"
rstest = "0.18.2"
