[package]
name = "swegov-opendata"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.25", features = ["serde"] }
deserx = { git = "https://github.com/kod-kristoff/deserx", version = "0.1.0" }
quick-xml = "0.28.2"
serde = { version = "1.0.163", features = ["derive"] }
serde-aux = "4.2.0"
serde_json = "1.0.96"
serde_with = "3.0.0"

[dev-dependencies]
quick-xml = { version = "0.28.2", features = ["serialize"] }
