[package]
name = "fetch-sfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fetch-sfs"
doc = false
test = false
doctest = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo"] }
config = { workspace = true }
# error-stack = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# local deps
webcrawler = { version = "0.1.0", path = "../webcrawler" }
opendata-spiders = { version = "0.1.0", path = "../opendata-spiders" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

preprocessors.workspace = true
