[package]
name = "fetch-sfs"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fetch-sfs"
doc = false
test = false
doctest = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo"] }
config = { workspace = true }
# error-stack = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
webcrawler = { workspace = true }
# local deps
opendata-spiders = { version = "0.1.0", path = "../opendata-spiders" }

preprocessors.workspace = true
