[package]
name = "fetch-sfs"
version.workspace = true
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fetch-sfs"
doc = false
test = false
doctest = false

[dependencies]
clap = { workspace = true, features = ["derive", "cargo"] }
config = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
webcrawler = { workspace = true }
# local deps
opendata-spiders = { workspace = true }
