[package]
name = "minidom-extension"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
minidom-14 = { workspace = true }
pretty_assertions = { workspace = true }
itertools = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[package.metadata.cargo-machete]
ignored = ["minidom-14"]
