[package]
name = "minidom-extension"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
minidom-14 = { workspace = true }
pretty_assertions = { workspace = true }
itertools = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["minidom-14"]
