[package]
name = "opendata-rd-spider"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
fs-err = { workspace = true, features = ["tokio"] }
miette = { workspace = true }
reqwest = { workspace = true, features = [
    "rustls",
    # "json",
    "rustls-tls",
    "brotli",
    "gzip",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
swegov-opendata = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
url.workspace = true
webcrawler = { workspace = true }
yaserde.workspace = true
