[package]
name = "opendata-spiders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
# anyhow = "1.0.71"
anyhow = { workspace = true }
async-trait = { workspace = true }
deserx = { workspace = true }
flate2 = { workspace = true }
quick-xml = { workspace = true, features = ["serde", "serialize"] }
reqwest = { workspace = true, features = [
    "rustls",
    "json",
    "rustls-tls",
    "brotli",
    "gzip",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
swegov-opendata = { version = "0.2.0", path = "../swegov-opendata" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
tracing = { workspace = true }
ulid = { workspace = true }
webcrawler = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
