[package]
name = "opendata-spiders"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
flate2 = { workspace = true }
fs-err = { workspace = true, features = ["tokio"] }
quick-xml = { workspace = true, features = ["serde", "serialize"] }
reqwest = { workspace = true, features = [
    "rustls",
    "json",
    "rustls-tls",
    "brotli",
    "gzip",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
swegov-opendata = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
tracing = { workspace = true }
tracing_log_error.workspace = true
ulid = { workspace = true }
webcrawler = { workspace = true }
xml-rs.workspace = true
yaserde = { workspace = true, features = ["derive"] }

[dev-dependencies]
rstest.workspace = true
