[package]
name = "preprocess-rd"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "preprocess-rd"
test = false
doctest = false

[dependencies]
clap = { workspace = true, features = ["derive", "cargo"] }
miette = { workspace = true, features = ["fancy"] }
preprocess-ui = { workspace = true }
swegov-opendata-preprocess = { workspace = true }
