[package]
name = "preprocessors"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rd-preprocess"
path = "src/rd-preprocess.rs"
test = false
doctest = false

[lib]
doctest = false

[dependencies]
clap = { workspace = true, features = ["derive", "cargo"] }
error-stack = { workspace = true }
prodash = { workspace = true, features = [
    "render-line",
    "render-line-crossterm",
] }
swegov-opendata-preprocess = { workspace = true}
tracing = { workspace = true }
tracing-forest = { workspace = true }
tracing-subscriber = { workspace = true }
