[package]
name = "sfs-preprocess"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "sfs-preprocess"
test = false
doctest = false

[dependencies]
clap = { workspace = true, features = ["derive", "cargo"] }
error-stack = { workspace = true }
prodash = { workspace = true, features = [
    "render-line",
    "render-line-crossterm",
] }
tracing = { workspace = true }
tracing-forest = { workspace = true }
tracing-subscriber = { workspace = true }

# local deps
preprocessors = {workspace = true}
swegov-opendata-preprocess = { workspace = true }
