[package]
name = "sparv-extension"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
serde_yaml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
fs-err.workspace = true
