[package]
name = "swegov-opendata-preprocess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
error-stack = { workspace = true }
html5ever = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
soup = { workspace = true }
zip = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
swegov-opendata = { version = "0.2.0", path = "../swegov-opendata" }
chrono = { workspace = true }
flate2 = { workspace = true }
pretty_assertions = { workspace = true }
once_cell = { workspace = true }
itertools = { workspace = true }
minidom-extension = { version = "0.1.0", path = "../minidom-extension" }
sparv-extension = { version = "0.1.0", path = "../sparv-extension" }
prodash = { workspace = true, features = [
    "render-line",
    "render-line-crossterm",
] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
itertools = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
