[package]
name = "swegov-opendata-preprocess"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
error-stack = { workspace = true }
html5ever = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
soup = { workspace = true }
zip = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
swegov-opendata = { workspace = true }
chrono = { workspace = true }
flate2 = { workspace = true }
pretty_assertions = { workspace = true }
once_cell = { workspace = true }
itertools = { workspace = true }
minidom-extension = { workspace = true }
sparv-extension = { workspace = true }
prodash = { workspace = true, features = [
    "render-line",
    "render-line-crossterm",
] }

[dev-dependencies]
itertools = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
