[package]
name = "swegov-opendata-preprocess"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
chrono = { workspace = true }
flate2 = { workspace = true }
fs-err.workspace = true
html5ever = { workspace = true }
itertools = { workspace = true }
markup5ever_rcdom = { workspace = true }
miette = { workspace = true }
minidom-extension = { workspace = true }
once_cell = { workspace = true }
preprocess-progress = { workspace = true }
pretty_assertions = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
sparv-extension = { workspace = true }
swegov-opendata = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing_log_error = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
insta = { workspace = true }
itertools = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
test-log = { workspace = true, features = ["trace", "color"] }
