[package]
name = "swegov-opendata"
version = "0.2.1"
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
miette = { workspace = true }
quick-xml = { workspace = true, features = ["serde-types"] }
serde = { workspace = true, features = ["derive"] }
serde-aux = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.10.0", features = ["serde"] }

[dev-dependencies]
anyhow = { workspace = true }
insta = { version = "1.40.0", features = ["yaml"] }
quick-xml = { workspace = true, features = ["serialize"] }
rstest.workspace = true
similar-asserts = { workspace = true }
