[package]
name = "swegov-opendata"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
chrono = { workspace = true, features = ["serde"] }
fs-err = { workspace = true, features = ["expose_original_error"] }
quick-xml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-aux = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
xml-rs = { workspace = true }
yaserde = { workspace = true, features = ["derive"] }

[dev-dependencies]
anyhow = { workspace = true }
insta = { workspace = true, features = ["yaml"] }
quick-xml = { workspace = true, features = ["serialize"] }
rstest.workspace = true
similar-asserts = { workspace = true }
