[package]
name = "webcrawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3.28"
serde = "1.0.164"
serde_json = "1.0.97"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "fs"] }
tokio-stream = "0.1.14"
tracing = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
